# learnopengl2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
python/: gen_materials.py
src/: 1.1.1.hello_window.cpp  1.2.1.hello_triangle.cpp  1.2.2.hello_triangle_ebo.cpp  1.2.3.hello_triangle_ex1.cpp  1.2.4.hello_triangle_ex2.cpp  1.2.5.hello_triangle_ex3.cpp  1.2.hello_triangle.cpp  1.2.hello_triangle_ebo.cpp  1.2.hello_triangle_ex1.cpp  1.2.hello_triangle_ex2.cpp  1.2.hello_triangle_ex3.cpp  1.3.1.shaders_from_file.cpp  1.3.2.shaders_vertex_color.cpp  1.3.3.shaders_uniform.cpp  1.3.4.shaders_color_attr.cpp  1.3.5.shaders_ex1.cpp  1.3.6.shaders_ex2.cpp  1.3.shaders_color_attr.cpp  1.3.shaders_color_attr.vert  1.3.shaders_ex1.cpp  1.3.shaders_ex1.frag  1.3.shaders_ex1.vert  1.3.shaders_ex2.cpp  1.3.shaders_ex2.vert  1.3.shaders_from_file.cpp  1.3.shaders_uniform.cpp  1.3.shaders_uniform.frag  1.3.shaders_uniform.vert  1.3.shaders_vertex_color.cpp  1.4.1.textures_triangle.cpp  1.4.2.textures_square.cpp  1.4.2.textures_square.frag  1.4.2.textures_square.vert  1.4.3.textures_2_texture_units.cpp  1.4.5.textures_ex2.cpp  1.4.5.textures_ex2.frag  1.4.6.textures_ex3.cpp  1.4.6.textures_ex3.frag  1.4.7.textures_ex4.cpp  1.4.7.textures_ex4.frag  (+105 more)
src/include/: camera.h  cube_info.h  file.h  gl_debug.h  image.h  materials.h  shader_program.h  whisky.h
src/include/learnopengl/: filesystem.h  shader_s.h
